<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amidayiera.droidcafe.MainActivity">

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="4"
        android:title="@string/about_us"
        app:showAsAction="never"
        android:icon="@drawable/ic_about"
        />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="1"
        android:title="@string/order"
        app:showAsAction="always"
        android:icon="@drawable/add_shopping_cart"
        />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="3"
        android:title="@string/status"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_status"
        />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="2"
        android:title="@string/call_us"
        app:showAsAction="never"
        android:icon="@drawable/ic_call"
        />

    <item
        android:id="@+id/action_locate_us"
        android:orderInCategory="5"
        android:title="@string/locate_us"
        app:showAsAction="never"
        android:icon="@drawable/ic_location"
        />
</menu>
