<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<TextView
    android:id="@+id/text_intro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/droid_desserts"
    android:textStyle="bold"
    android:layout_marginTop="16dp"
    android:textColor="@android:color/black"
    android:textSize="22sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/text_choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_dessert"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_goneMarginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/donut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_choose_dessert"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:onClick="showDonutMessage"
        />

    <TextView
        android:id="@+id/text_donut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@android:color/holo_purple"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintTop_toBottomOf="@id/text_choose_dessert"
        app:layout_constraintBottom_toBottomOf="@id/donut"
        app:layout_constraintLeft_toRightOf="@id/donut"
        />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icecream"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donut"
        android:contentDescription="@string/ice_creams_have_strawberry_and_vanilla_combos"
        android:onClick="showIceCreamMessage"
        />

    <TextView
        android:id="@+id/text_ice_cream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@android:color/holo_purple"
        android:text="@string/ice_creams_have_strawberry_and_vanilla_combos"
        app:layout_constraintTop_toBottomOf="@id/donut"
        app:layout_constraintBottom_toBottomOf="@id/ice_cream"
        app:layout_constraintLeft_toRightOf="@id/ice_cream"
        />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/froyo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        android:contentDescription="@string/fro_yo_is_a_premium_self_serve_frozen_yoghurt"
        android:onClick="showFroyoMessage"
        />

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@android:color/holo_purple"
        android:text="@string/fro_yo_is_a_premium_self_serve_frozen_yoghurt"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        app:layout_constraintBottom_toBottomOf="@id/froyo"
        app:layout_constraintLeft_toRightOf="@id/froyo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
